# postgres_seeder

./: Cargo.toml  README.md  diesel.toml
migrations/2025-02-28-005736_users/: up.sql
migrations/2025-02-28-010109_posts/: up.sql
src/: database.rs  interfaces.rs  main.rs  models.rs  schema.rs  service.rs
