[package]
name = "postgres_seeder"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.7", features = ["postgres", "serde_json"], default-features = false }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
fake = "4.0.0"
indicatif = "0.17.11"
rand = "0.9.0"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.139"
